# etic-pw2426-backend-i

./: .gitignore  LICENSE  README.md  hello.py
.devcontainer/: devcontainer.json
01_python_basics_dev_container_poetry/session_1/: pyproject.toml
01_python_basics_dev_container_poetry/session_1/src/session_1/: hello.py  main.py
02_data_structures_comprehensions_functions_args_kwargs/session_2/: pyproject.toml
02_data_structures_comprehensions_functions_args_kwargs/session_2/src/session_2/: comprehensions.py  exercice.py  methods.py
03_object_oriented_programming_dunder_methods_inheritance/session_3/: pyproject.toml
03_object_oriented_programming_dunder_methods_inheritance/session_3/src/session_3/: exercise.py  store.py
04_iterators_generators_enumerate_advanced_yield/session_04/: pyproject.toml
04_iterators_generators_enumerate_advanced_yield/session_04/src/session_04/: fibonacci.py  filtered.py  iterators.py
05_decorators/session_5/: pyproject.toml
05_decorators/session_5/src/session_5/: challenge.py  decorators.py  log.py  sleep.py
06_unit_testing_pytest/session_06/: pyproject.toml
06_unit_testing_pytest/session_06/src/session_06/: __init__.py  factorial.py
06_unit_testing_pytest/session_06/tests/: test_sample.py
07_context_managers/session_07/: pyproject.toml
07_context_managers/session_07/src/session_07/: context_manager.py  main.py
08_command_line_interfaces_w_typer/session_08/: pyproject.toml
08_command_line_interfaces_w_typer/session_08/src/session_08/: main.py  test_main.py
09_building_discord_bot_w_typer_cli/ollama_discord_bot_example/: dockerfile
09_building_discord_bot_w_typer_cli/session_09/: pyproject.toml
09_building_discord_bot_w_typer_cli/session_09/src/session_09/: Dockerfile  bot.py  cli.py  compose.yaml
10_http_protocol/session_10/: pyproject.toml
10_http_protocol/session_10/src/session_10/: http_server.py  main.py
10_http_protocol/session_10/tests/: test_http_server.py
11_developing_api_w_fastapi/session_11/: pyproject.toml
11_developing_api_w_fastapi/session_11/src/session_11/: main.py
11_developing_api_w_fastapi/session_11/tests/: test_main.py
12_deploying_fastapi_api_w_docker_and_logging/session_12/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
12_deploying_fastapi_api_w_docker_and_logging/session_12/src/session_12/: database.py  main.py  models.py  services.py
12_deploying_fastapi_api_w_docker_and_logging/session_12/tests/: test_api.py
13_integrating_docker_fastapi_sqlmodel_postgres_w_logic_layers/session_13/: Dockerfile  docker-compose.yml  pyproject.toml
13_integrating_docker_fastapi_sqlmodel_postgres_w_logic_layers/session_13/src/session_13/: main.py
djproject/: .dockerignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
djproject/djproject/: settings.py  urls.py
djproject/todo/: admin.py  forms.py  models.py  urls.py  views.py
djproject/todo/migrations/: 0001_initial.py  0002_task_user.py
djproject/todo/templates/: base.html
djproject/todo/templates/registration/: login.html  signup.html
djproject/todo/templates/todo/: index.html  task_list.html
djproject/todo/tests/: test_views.py
http_socket_test_example/: pyproject.toml
http_socket_test_example/src/http_socket_test_example/: main.py
http_socket_test_example/tests/: main_test.py
ollama_discord_bot_example/: .dockerignore  Makefile  compose.yaml  dockerfile  pyproject.toml
ollama_discord_bot_example/src/ollama_bot/: bot.py
ollama_discord_bot_example/src/ollama_discord_bot_example/: bot.py
project_module_briefing/expense_manager/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
project_module_briefing/expense_manager/.devcontainer/: devcontainer.json
project_module_briefing/expense_manager/app/: admin.py  forms.py  models.py  views.py
project_module_briefing/expense_manager/config/: settings.py  urls.py
project_module_briefing/expense_manager/templates/: base.html  index.html  page_not_found.html
project_module_briefing/expense_manager/templates/app/: delete.html  edit.html  purge.html  records.html
project_module_briefing/expense_manager/templates/auth/: login.html  register.html
project_module_briefing/expense_manager/tests/: test_app.py
project_module_briefing/expense_tracker/: Dockerfile  Makefile  README.md  README_DEV.md  compose.yaml  pyproject.toml
project_module_briefing/expense_tracker/core/: models.py  views.py
project_module_briefing/expense_tracker/core/migrations/: 0001_initial.py
project_module_briefing/expense_tracker/core/templates/: base.html  index.html  page_not_found.html
project_module_briefing/expense_tracker/core/templates/auth/: login.html  register.html
project_module_briefing/expense_tracker/expense_tracker/: settings.py  urls.py
project_module_briefing/expense_tracker/static/core/: styles.css
