[project]
name = "session-07"
version = "0.1.0"
description = ""
authors = [
    {name = "nuno2msilva",email = "166436702+nuno2msilva@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "session_07", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
